fixed scroll bug and game over menu visibilty problem

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -29,7 +29,6 @@ body {
       font-family: "Rubik Puddles", cursive;
       font-size: 20px;
       color: white;
-      margin-top: 20px;
       .score-wrapper {
         .score {
         }
